--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Title of the document</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+	<title>Title of the document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-
-<h1>Titre 1</h1>
-
-<form action="/ma-page-de-traitement" method="post">
-    <ul>
-        <li>
-            <label for="name">Nom:</label>
-            <input type="text" id="name" name="name" pattern="[a-z]{1-100}"/>
-        </li>
-        <li>
-            <label for="firstname">Prénom:</label>
-            <input type="text" id="firstname" name="firstname" pattern="[a-z]{1-25}"/>
-        </li>
-        <li>
-            <label for="address">Adresse:</label>
-            <textarea id="address" name="address" pattern="[a-z]{1-250}"></textarea>
-        </li>
-        <li>
-            <label for="code_postal">Code postal:</label>
-            <input type="text" id="code_postal" name="code_postal" pattern="[0-9]{5}" />
-        </li>
-        <li>
-            <label for="tel">Téléphone :</label>
-            <input type="tel" id="tel" name="tel"
-                   pattern="+[0-9]{11}"/>
-        </li>
-        <li>
-            <label for="mail">E-mail:</label>
-            <input type="email" id="mail" name="user_mail" />
-        </li>
-    </ul>
-    <fieldset>
-        <legend>Sexe</legend>
-
-        <div>
-            <input type="radio" id="male" name="drone" value="male" checked />
-            <label for="male">Homme</label>
-        </div>
-        <div>
-            <input type="radio" id="female" name="drone" value="female" />
-            <label for="female">Femme</label>
-        </div>
-    </fieldset>
-    <ul>
-        <li>
-            <div>
-                <input type="password" id="password" name="passsword" />
-                <label for="password">Mot de passe</label>
-            </div>
-        <li>
-            <div>
-                <input type="text" id="login" name="login" />
-                <label for="login">Login</label>
-            </div>
-        </li>
-    </ul>
-    <input type="submit" value="Envoyer">
-</form>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	
+	<h1>Inscription</h1>
+	
+	<form class="" action="/ma-page-de-traitement" method="post">
+		<div class="row">
+			<div class="form-group col">
+				<label for="name">Nom:</label>
+				<input class="form-control" type="text" id="name" name="name" pattern="[a-z]{1-100}"/>
+			</div>
+			<div class="form-group col">
+				<label for="firstname">Prénom:</label>
+				<input class="form-control" type="text" id="firstname" name="firstname" pattern="[a-z]{1-25}"/>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="address">Adresse:</label>
+			<textarea class="form-control" id="address" name="address" pattern="[a-z]{1-250}"></textarea>
+		</div>
+		<div class="form-group">
+			<label for="code_postal">Code postal:</label>
+			<input class="form-control" type="text" id="code_postal" name="code_postal" pattern="[0-9]{5}" />
+		</div>
+		<div class="form-group">
+			<label for="tel">Téléphone :</label>
+			<input class="form-control" type="tel" id="tel" name="tel"
+			pattern="+[0-9]{11}"/>
+		</div>
+		<div class="form-group">
+			<label for="mail">E-mail:</label>
+			<input class="form-control" type="email" id="mail" name="user_mail" />
+		</div>
+		
+		<fieldset>
+			<legend>Sexe</legend>
+			
+			<div class="form-check form-check-inline">
+				<input type="radio" id="male" name="drone" value="male" checked />
+				<label for="male">Homme</label>
+			</div>
+			<div class="form-check form-check-inline">
+				<input type="radio" id="female" name="drone" value="female" />
+				<label for="female">Femme</label>
+			</div>
+		</fieldset>
+		
+		<div class="form-group">
+			<input class="form-control" type="password" id="password" name="passsword" />
+			<label for="password">Mot de passe</label>
+		</div>
+		<div class="form-group">
+			<input class="form-control" type="text" id="login" name="login" />
+			<label for="login">Login</label>
+		</div>
+		
+		<input type="submit" value="Envoyer">
+	</form>
+	
 </body>
 
 
