--- a/index.html
+++ b/index.html
@@ -11,61 +11,62 @@
 <body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	
-	<h1>Inscription</h1>
-	
-	<form class="" action="/ma-page-de-traitement" method="post">
-		<div class="row">
-			<div class="form-group col">
-				<label for="name">Nom:</label>
-				<input class="form-control" type="text" id="name" name="name" pattern="[a-z]{1-100}"/>
+	<h1 class="d-flex justify-content-center">Inscription</h1>
+	<div class="d-flex justify-content-around">
+		<form class="" action="/ma-page-de-traitement" method="post">
+			<div class="row">
+				<div class="form-group col">
+					<label for="name">Nom:</label>
+					<input class="form-control" type="text" id="name" name="name" pattern="[a-z]{1-100}"/>
+				</div>
+				<div class="form-group col">
+					<label for="firstname">Prénom:</label>
+					<input class="form-control" type="text" id="firstname" name="firstname" pattern="[a-z]{1-25}"/>
+				</div>
 			</div>
-			<div class="form-group col">
-				<label for="firstname">Prénom:</label>
-				<input class="form-control" type="text" id="firstname" name="firstname" pattern="[a-z]{1-25}"/>
+			<div class="form-group">
+				<label for="address">Adresse:</label>
+				<textarea class="form-control" id="address" name="address" pattern="[a-z]{1-250}"></textarea>
 			</div>
-		</div>
-		<div class="form-group">
-			<label for="address">Adresse:</label>
-			<textarea class="form-control" id="address" name="address" pattern="[a-z]{1-250}"></textarea>
-		</div>
-		<div class="form-group">
-			<label for="code_postal">Code postal:</label>
-			<input class="form-control" type="text" id="code_postal" name="code_postal" pattern="[0-9]{5}" />
-		</div>
-		<div class="form-group">
-			<label for="tel">Téléphone :</label>
-			<input class="form-control" type="tel" id="tel" name="tel"
-			pattern="+[0-9]{11}"/>
-		</div>
-		<div class="form-group">
-			<label for="mail">E-mail:</label>
-			<input class="form-control" type="email" id="mail" name="user_mail" />
-		</div>
-		
-		<fieldset>
-			<legend>Sexe</legend>
+			<div class="form-group">
+				<label for="code_postal">Code postal:</label>
+				<input class="form-control" type="text" id="code_postal" name="code_postal" pattern="[0-9]{5}" />
+			</div>
+			<div class="form-group">
+				<label for="tel">Téléphone :</label>
+				<input class="form-control" type="tel" id="tel" name="tel"
+				pattern="+[0-9]{11}"/>
+			</div>
+			<div class="form-group">
+				<label for="mail">E-mail:</label>
+				<input class="form-control" type="email" id="mail" name="user_mail" />
+			</div>
 			
-			<div class="form-check form-check-inline">
-				<input type="radio" id="male" name="drone" value="male" checked />
-				<label for="male">Homme</label>
+			<fieldset>
+				<legend>Sexe</legend>
+				
+				<div class="form-check form-check-inline">
+					<input type="radio" id="male" name="drone" value="male" checked />
+					<label for="male">Homme</label>
+				</div>
+				<div class="form-check form-check-inline">
+					<input type="radio" id="female" name="drone" value="female" />
+					<label for="female">Femme</label>
+				</div>
+			</fieldset>
+			
+			<div class="form-group">
+				<input class="form-control" type="password" id="password" name="passsword" />
+				<label for="password">Mot de passe</label>
 			</div>
-			<div class="form-check form-check-inline">
-				<input type="radio" id="female" name="drone" value="female" />
-				<label for="female">Femme</label>
+			<div class="form-group">
+				<input class="form-control" type="text" id="login" name="login" />
+				<label for="login">Login</label>
 			</div>
-		</fieldset>
-		
-		<div class="form-group">
-			<input class="form-control" type="password" id="password" name="passsword" />
-			<label for="password">Mot de passe</label>
-		</div>
-		<div class="form-group">
-			<input class="form-control" type="text" id="login" name="login" />
-			<label for="login">Login</label>
-		</div>
-		
-		<input type="submit" value="Envoyer">
-	</form>
+			
+			<input type="submit" value="Envoyer">
+		</form>
+	</div>
 	
 </body>
 
